add Address and UserAddress DTOs with mappers, update UserResource to handle address operations